--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/_redirects",
               "src/favicon.ico",
               "src/assets"
             ],
