--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.0",
+    "@angular/cli": "~13.0.4",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
+    "@angular/compiler-cli": "~13.0.0",
     "@angular/core": "~13.0.0",
     "@angular/forms": "~13.0.0",
     "@angular/platform-browser": "~13.0.0",
@@ -20,14 +23,17 @@
     "@angular/router": "~13.0.0",
     "@igniteui/material-icons-extended": "^2.10.0",
     "bootstrap": "^5.1.3",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^13.0.2",
     "jquery": "^3.6.0",
     "jszip": "^3.7.1",
     "minireset.css": "~0.0.4",
+    "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
+    "typescript": "~4.4.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -45,5 +51,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.4.3"
+  },
+  "engines": {
+    "node": "14.18.0",
+    "npm": "6.14.15"
   }
 }
